clips refactors
